# ECoSigner

./: .gitignore  Cargo.toml  README.md
demo/CA/: CA.crt  CA.csr  CA.key  CA.pfx  CA.srl  CA：颁发证书.bat  csr.pem
demo/gmp-win/: gmpxx.lib
demo/代码签名_BSL/: 1-1 预配置-生成csr.bat  2-1 执行阶段-摘要.bat  2-2 执行阶段-签名.bat  2-3 执行阶段-构建.bat  config_nodes.json  hello.exe.dig  hello.exe.dig.signed  hello.exe.dig.xml  hello.exe.p7u  issued_crt.crt
demo/代码签名_OLD/: 1-1 预配置-生成csr.bat  1-2 预配置-生成pfx.bat  2 执行阶段-代码签名.bat  csr.pem  issued_crt.crt  private.pem  private.pfx
demo/攻击者/: key.pem  窃取私钥.bat
ecosigner_cli/: Cargo.toml  bandwidth_data.csv  bandwidth_n4t2_data.csv  bandwidth_n4t2_dkg.csv  bandwidth_n4t2_result.csv  bandwidth_n4t2_sign.csv  bandwidth_parser.py  bandwidth_result.csv  bench_proxy.sh  config_nodes.json  csr.pem  ecosigner_ctl.sh  hello.exe.dig  hello.exe.dig.signed  lat_n10t6_dkg_200ms.csv  lat_n10t6_sign_200ms.csv  lat_n20t13_dkg_200ms.csv  lat_n20t13_sign_200ms.csv  lat_n30t20_dkg.csv  lat_n30t20_sign_200ms.csv  lat_n3t1_bandwidth_dkg.csv  lat_n3t1_bandwidth_sign.csv  lat_n3t1_sign_200ms.csv  latency.sh  throughput
ecosigner_cli/config/: proxy.json
ecosigner_cli/examples/: test_redirect.rs
ecosigner_cli/local-shares-1/: id_CodeSigning.json  id_aaa.json  id_bbb.json
ecosigner_cli/local-shares-2/: id_CodeSigning.json  id_aaa.json  id_bbb.json
ecosigner_cli/local-shares-3/: id_CodeSigning.json  id_aaa.json  id_bbb.json
ecosigner_cli/mpe.bkp/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs  mod.rs
ecosigner_cli/src/: common_structs.rs  lib.rs  private.key  signtool_cmd.rs
ecosigner_cli/src/dev/: cli_signing.rs  gg20_signing.rs  test_redirect.rs
ecosigner_cli/src/mpe/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs
ecosigner_cli/src/mpe_lib/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_manager.rs
ecosigner_cli/src/use_mpe/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs
ecosigner_cli/utilities/: csr.pem  gmp.lib
